Repair jump to date.

--- a/static/style.css
+++ b/static/style.css
@@ -108,16 +108,16 @@ html, body {
     padding-bottom: 1ex;
 }
 
-.jump-to > form {
+#jump-to > form {
     display: flex;
 }
 
-.jump-to input {
+#jump-to input {
     flex-grow: 2;
     margin-right: 1em;
 }
 
-.jump-to button, .jump-to a {
+#jump-to button, #jump-to a {
     /* Same as height, figure out way to force this */
     width: 2.5em;
 }
